<resources>

    <string name="app_name">Tailgatr</string>
    
    <!-- Tailgate Activity -->
    <string name="location">Location</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="tailgates">Tailgates</string>
   	<string name="no_tailgates">No Tailgates</string>
   	<string name="new_tailgate">New Tailgate</string>
   	<string name="admin">Admin</string>
   	<string name="no_internet">No Internet Connection</string>
    <string name="check_internet">Check your network connection, then try again.</string>
    <string name="ok">OK</string>
    <string name="your_tailgates">You\'re tailgates</string>
    <string name="price">Price estimate:</string>
   	
   	<!-- Tailgate Edit Activity -->
   	<string name="info">Info</string>
   	<string name="friends">Friends</string>
   	<string name="food">Food</string>
   	<string name="save">Save</string>
   	<string name="cancel">Cancel</string>
   	<string name="new_food">New Food/Beverage</string>
   	<string name="name">Name</string>
   	<string name="invalid_name">Invalid name</string>
   	<string name="title">Title</string>
   	<string name="description">Description</string>
   	<string name="creating_tailgate">Creating tailgate</string>
   	<string name="what_about">What\'s the occasion\?</string>
   	<string name="whos_coming">Who\'s coming\?</string>
   	<string name="what_to_eat">What to bring\?</string>
   	
   	<!-- Login Activity -->
   	<string name="signing_in">Signing in&#8230;</string>
   	<string name="email">Email</string>
   	<string name="password">Password</string>
   	<string name="login">Login</string>
   	<string name="register">Register</string>
   	<string name="invalid_email">Invalid email</string>
   	<string name="invalid_password">Invalid password</string>
   	
   	<!-- Register Activity -->
   	<string name="nickname">Nickname</string>
   	<string name="confirm_password">Confirm password</string>
   	<string name="invalid_nickname">Invalid nickname</string>
   	<string name="do_not_match">Passwords do not match</string>
   	
   	<!-- Event View Activity -->
   	<string name="info_tab">Info</string>
   	<string name="items_tab">Items</string>
   	<string name="invitees_tab">Items</string>

</resources>
