<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="8dp"
         android:paddingRight="8dp">
         
    <EditText 
        android:id="@+id/login_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        />
    
    <EditText 
        android:id="@+id/login_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/login_email_field"
        android:hint="@string/password"
        />
    
    <Button 
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_field"
        android:layout_toLeftOf="@+id/register_button"
        android:text="@string/login"
        />
    	
    <Button
        android:id="@id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_field"
        android:layout_alignParentRight="true"
        android:text="@string/register"
        />
    
    <ProgressBar 
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_field"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />
         
 </RelativeLayout>
